# adaptivemsg-doc

./: README.md  architecture-comparison.md  go-architecture.md  performance-analysis.md  rust-architecture.md  short-lived-api.md
test/: run_inprocess.sh  run_separated.sh
test/go-process-probe/: go.mod  main.go
test/runtime-probe/: Cargo.toml
test/runtime-probe/src/: main.rs
test/rust-process-probe/: Cargo.toml
test/rust-process-probe/src/: main.rs
