[package]
name = "am_rust_process_probe"
version = "0.1.0"
edition = "2021"

[dependencies]
adaptivemsg = { path = "../../../adaptivemsg-rust" }
tokio = { version = "1.38", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
inventory = "0.3"
anyhow = "1.0"
